src/test/resources/stanzas/iq/pubsub/subscribe/foreign/fail/items/itemsRequest.stanza
<iq type="get"
    id="items1"
    from="willbe@overriden"
    to="shakespeare.lit">
   <query xmlns="http://jabber.org/protocol/disco#items"/>
</iq>